# namo

./: .env.example  .gitignore  README.md  benchmark_snamo_vs_mappo.py  environment_visualizations.md  eval_pure_snamo.py  eval_snamo_unc.py  eval_v3.py  eval_v4.py  evaluate.py  pyproject.toml  requirements.txt  run_20_simulations.py  run_baselines.py  run_coordination_eval.py  run_mappo_gui.py  run_scenario_tests.py  train_and_evaluate.py
configs/: cross_intersection_coordination.yaml  custom_reconstructed_map.yaml  custom_reconstructed_map_robots.yaml  movable_obstacle_choke_namo.yaml  namo_push_only.yaml  narrow_doorway_congestion.yaml  single_corridor_yielding.yaml  symmetric_bottleneck_4robots.yaml  symmetric_bottleneck_deadlock.yaml  warehouse_3robots.yaml  warehouse_large.yaml  warehouse_small.yaml
core/: __init__.py  planner.py
decision/: namo_decision_pipeline.py  namo_visualizer.py  namosim_adapter.py  snamo_planner.py  unet_decision_pipeline.py
experiments/: sr_convergence.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
mappo/: evaluate_mappo.py  mappo_agent.py  mappo_env.py  train_mappo.py  train_v4.py
maps/: namo_environments.py
multi_robot/: __init__.py  belief_broadcaster.py  conflict_detection.py  coordinator.py  deadlock_resolution.py
namo_project/: LICENSE  README.md
profiles/: example_profile.yaml
results/: mappo_ablation_and_stats.md  scenario_results_table.md  snamo_vs_mappo_benchmark.md  v4_gui_results.json
scratch/: compile_academic_table.py  debug_corridor.py  debug_custom_map.py  debug_oscillation.py  (+12 more)
(+72 files in other folders)
