[project]
name = "autonomous-browser-agent"
version = "0.1.0"
description = "A modular goal-driven browser agent scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
browser-agent = "browser_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]
